Fix #5. Обработка квадратных скобок в пути